URLジェネレート機能をオミット

--- a/app/settings.ejs
+++ b/app/settings.ejs
@@ -173,7 +173,7 @@
                         </div>
                     </div>
                 </div>
-                <div id="generateURLContainer">
+                <!-- <div id="generateURLContainer">
 
                     <div class="settingsModsHeader">URLをジェネレート</div>
                     <div id="settingsShaderpackDesc">現在の設定をURLに変換して共有できます。</div>
@@ -186,7 +186,7 @@
                         <button id="copyDisicordStringButton"> URLをコピー(Discord用) </button>
                         <button id="copyURLButton"> URLをコピー </button>
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
         <div id="settingsTabJava" class="settingsTab" style="display: none;">
