--- a/app/app.ejs
+++ b/app/app.ejs
@@ -40,9 +40,7 @@
     <div id="loadingContainer">
         <div id="loadingContent">
             <div id="loadSpinnerContainer">
-                <img id="loadCenterImage" src="assets/images/LoadingText.svg">
-                <img id="loadSpinnerImage" class="rotating" src="assets/images/LoadingSeal.svg">
-                <img id="loadSpinnerImageBack" class="rotatingBack" src="assets/images/LoadingBack.svg">
+                <img id="loadingLogo" src="assets/images/SealCircle.png" alt="">
             </div>
         </div>
     </div>
