ハードウェアアクセラレーションの切り替え MS認証の問題を修正

--- a/app/settings.ejs
+++ b/app/settings.ejs
@@ -309,6 +309,18 @@
                     </label>
                 </div>
             </div>
+            <div class="settingsFieldContainer">
+                <div class="settingsFieldLeft">
+                    <span class="settingsFieldTitle">ハードウェアアクセラレーション</span>
+                    <span class="settingsFieldDesc">GPUを使用してランチャーの描画を高速化します。変更後は再起動が必要です。</span>
+                </div>
+                <div class="settingsFieldRight">
+                    <label class="toggleSwitch">
+                        <input type="checkbox" cValue="HardwareAcceleration">
+                        <span class="toggleSwitchSlider"></span>
+                    </label>
+                </div>
+            </div>
             <div class="settingsFileSelContainer">
                 <div class="settingsFileSelContent">
                     <div class="settingsFieldTitle" id="settingsDataDirTitle"><%- lang('settings.dataDirectoryTitle') %></div>
